--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1>온투업(P2P) 담보대출 계산기</h1>
     <p class="subtitle">
-      1. 후추DB에 저장된 실제 대출 데이터 기반으로 계산됩니다.<br>
+      1. 후추DB에 저장된 실제 대출 데이터를 기반으로 계산됩니다.<br>
       2. 본 계산기는 신용점수에 전혀 영향이 없습니다.
     </p>
 
@@ -87,3 +87,4 @@
   </div>
 </body>
 </html>
+
