--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- STEP 4-1 -->
     <div class="step">
-      <label>STEP4-1. STEP4 금액 중 차감할 금액(대환+보증금반환)</label>
+      <label>(선택사항) STEP4 금액 중 차감할 금액(대환+보증금반환)</label>
       <input type="text" id="deduction" placeholder="없으면 0 입력" value="0"/>
     </div>
 
@@ -87,4 +87,5 @@
   </div>
 </body>
 </html>
+
 
