--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>나도 온투업(P2P) 담보대출이 가능할까?</h1>
+    <h1>온투업(P2P) 담보대출 계산기</h1>
     <p class="subtitle">
       1. 후추DB에 저장된 실제 대출 데이터 기반으로 계산됩니다.<br>
       2. 본 계산기는 신용점수에 전혀 영향이 없습니다.
@@ -79,3 +79,4 @@
   </div>
 </body>
 </html>
+
