--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>온투업(P2P) 담보대출 계산기</title>
   <link rel="stylesheet" href="css/style.css" />
   <!-- SDK 먼저, 둘 다 defer 로드(HTML 파싱 뒤 실행, 순서는 위→아래 보장) -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" defer></script>
-  <script src="js/main.js" defer></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script defer src="js/main.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>나도 온투업(P2P) 담보대출이 가능할까?</h1>
+    <h1>온투업(P2P) 담보대출 계산기</h1>
     <p class="subtitle">
       1. 후추DB에 저장된 실제 대출 데이터 기반으로 계산됩니다.<br>
       2. 본 계산기는 신용점수에 전혀 영향이 없습니다.
@@ -50,7 +50,7 @@
     </div>
 
     <div class="step">
-      <label>(선택사항) STEP4 금액 중 차감할 금액(대환+보증금반환)</label>
+      <label>STEP4-1. STEP4 금액 중 차감할 금액(대환+보증금반환)</label>
       <input type="text" id="deduction" placeholder="없으면 0 입력" value="0" />
     </div>
 
@@ -79,7 +79,3 @@
   </div>
 </body>
 </html>
-
-
-
-
