--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>온투업(P2P) 담보대출 계산기</title>
   <link rel="stylesheet" href="css/style.css" />
   <!-- SDK 먼저, 둘 다 defer 로드(HTML 파싱 뒤 실행, 순서는 위→아래 보장) -->
-  <script defer src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script defer src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" defer></script>
+  <script src="js/main.js" defer></script>
 </head>
 <body>
   <div class="container">
