--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>온투업(P2P) 담보대출 계산기</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css?ver=1" />
   <!-- SDK 먼저, 둘 다 defer 로드(HTML 파싱 뒤 실행, 순서는 위→아래 보장) -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" defer></script>
   <script src="js/main.js" defer></script>
