--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
           <div class="notice info">
             <p><strong>필수 입력(1~5)</strong>을 모두 작성해주세요.</p>
             <ul style="margin:6px 0 0 18px; color:#334155;">${list}</ul>
-            <p class="disclaimer">※ 해당 정보는 온투업체의 심사 결과와 다를 수 있습니다.</p>
+            <p class="disclaimer">※ 안심하세요~^^ 입력하신 정보는 저장되지 않습니다.</p>
           </div>
         `, {type:'info', text:'안내'});
         if(focusId){ setTimeout(()=> document.getElementById(focusId).focus({preventScroll:true}), 150); }
@@ -780,3 +780,4 @@
   </script>
 </body>
 </html>
+
