--- a/index.html
+++ b/index.html
@@ -451,43 +451,17 @@
       return { ratio, limit, maxRequested, usedDeduction: d, status };
     }
 
-    /* ── 금일 이용자수(프런트 로컬) ───────────────── */
-    const DAILY_PREFIX = 'huchu.dailyUsers.';
-    let _currentDailyKey = null;
-
-    function getKSTDateKey(ts = Date.now()){
-      const msKST = ts + 9 * 60 * 60 * 1000; // KST = UTC+9
-      const d = new Date(msKST);
-      const yyyy = d.getUTCFullYear();
-      const mm = String(d.getUTCMonth()+1).padStart(2,'0');
-      const dd = String(d.getUTCDate()).padStart(2,'0');
-      return `${yyyy}-${mm}-${dd}`;
-    }
-    function todayKey(){ return DAILY_PREFIX + getKSTDateKey(); }
-    function readDaily(){ const key = todayKey(); return { key, count: Number(localStorage.getItem(key)||'0') }; }
-    function writeDaily(key, val){ localStorage.setItem(key, String(val)); }
-
-    function initDailyUsersUI(){
-      _currentDailyKey = todayKey();
-      const { count } = readDaily();
-      const el = document.getElementById('todayUsersCount');
-      if(el){
-        el.setAttribute('data-target', count);
-        el.textContent = count.toLocaleString('ko-KR');
-      }
-      // KST 자정 교체 감시(60초마다)
-      setInterval(() => {
-        const newKey = todayKey();
-        if(newKey !== _currentDailyKey){
-          _currentDailyKey = newKey;
-          const fresh = Number(localStorage.getItem(newKey)||'0');
-          const el2 = document.getElementById('todayUsersCount');
-          if(el2){
-            el2.setAttribute('data-target', fresh);
-            el2.textContent = fresh.toLocaleString('ko-KR');
-          }
+    /* ── 금일 이용자수(글로벌, 서버 연동) ───────────────── */
+    async function fetchTodayCount(){
+      try{
+        const res = await fetch('/api/daily-users', { method: 'GET' });
+        const data = await res.json();
+        const el = document.getElementById('todayUsersCount');
+        if (el && Number.isFinite(data.count)) {
+          el.textContent = data.count.toLocaleString('ko-KR');
+          el.setAttribute('data-target', data.count);
         }
-      }, 60000);
+      }catch(e){ console.warn('failed to fetch daily count', e); }
     }
 
     function animateCount(el, to, duration = 900){
@@ -502,25 +476,22 @@
       }
       requestAnimationFrame(frame);
     }
-    function setDailyUsers(n){
-      const key = todayKey();
-      const el = document.getElementById('todayUsersCount');
-      writeDaily(key, n);
-      if(el) animateCount(el, n);
-    }
-    function incrementDailyUsers(delta = 1){
-      const key = todayKey();
-      const current = Number(localStorage.getItem(key)||'0');
-      const next = current + delta;
-      writeDaily(key, next);
-      const el = document.getElementById('todayUsersCount');
-      if(el) animateCount(el, next);
+
+    async function bumpTodayCount(){
+      try{
+        const res = await fetch('/api/daily-users', { method: 'POST' });
+        const data = await res.json();
+        const el = document.getElementById('todayUsersCount');
+        if (el && Number.isFinite(data.count)) {
+          animateCount(el, data.count);
+        }
+      }catch(e){ console.warn('failed to bump daily count', e); }
     }
 
     /* ── Modal ─────────────────────────────────── */
     const modal = {
       el: null, body: null, closeBtn: null, statusEl: null,
-      open(html, status){ // status: { type: 'success'|'error'|'info', text: '대출 가능'|'대출 불가'|'안내' }
+      open(html, status){
         if(!this.el){
           this.el = document.getElementById('resultModal');
           this.body = document.getElementById('modalBody');
@@ -585,8 +556,9 @@
       const btn = document.getElementById('calcBtn');
       if (btn) btn.addEventListener('click', onCalculate);
 
-      initDailyUsersUI();
-      // setDailyUsers(342); // 서버 카운트 연동시
+      // 서버 전역 카운트 불러오고, 1분마다 갱신(다른 이용자 반영 & 자정 전환)
+      fetchTodayCount();
+      setInterval(fetchTodayCount, 60000);
     });
 
     /* ── KPI 빌더들 ───────────────────────────── */
@@ -651,7 +623,7 @@
       // 인라인 박스 숨김(중복 표시 방지)
       document.getElementById('result').classList.add('hide');
 
-      // r 계산(불가 케이스에서도 '가능 요청금액' 제공하기 위함)
+      // r 계산
       let r;
       try {
         r = computeLtv({region, propertyType, marketValue, seniorLoan, deduction, requestedLoan});
@@ -672,7 +644,7 @@
           </div>
         `;
         modal.open(html, {type:'error', text:'대출 불가'});
-        incrementDailyUsers(1);
+        bumpTodayCount();  // ✅ 전역 카운트 +1
         return;
       }
 
@@ -688,11 +660,11 @@
           </div>
         `;
         modal.open(html, {type:'error', text:'대출 불가'});
-        incrementDailyUsers(1);
+        bumpTodayCount();  // ✅ 전역 카운트 +1
         return;
       }
 
-      // 3) 요청 없음 안내
+      // 3) 요청 없음 안내(계산 미실행 → 카운트 증가 없음)
       if (r.status === 'no-request') {
         const html = `
           <div class="notice info">
@@ -775,9 +747,8 @@
         ${breakdownInfo}
       `;
       modal.open(html, {type:'success', text:'대출 가능'});
-      incrementDailyUsers(1);
+      bumpTodayCount();  // ✅ 전역 카운트 +1
     }
   </script>
 </body>
 </html>
-
